--- a/style.css
+++ b/style.css
@@ -11,12 +11,15 @@ body {
   body #header-canvas-container {
     width: 100%;
     z-index: -10; }
+  body .inv {
+    display: none; }
   body .nav-fixed {
     position: fixed;
     top: 0;
     left: 0;
     width: 100%; }
   body #nav_bar {
+    z-index: 666;
     width: 100%;
     height: 60px;
     display: inline-block;
@@ -33,21 +36,11 @@ body {
           font-size: 20px; }
           body #nav_bar ul li a:hover {
             background-color: #00796B; }
-  body #about-me, body #something, body #my-projects, body #contact {
-    padding: 200px 0;
-    background-image: url(./img/code-desktop.jpg);
-    background-attachment: fixed;
-    background-repeat: no-repeat; }
-  body #something {
-    background-image: url(./img/mobile-desktop.jpg); }
-  body #my-projects {
-    background-image: url(./img/design-desktop.jpg); }
-  body #contact {
-    background-image: url(./img/office-desktop.jpg); }
   body .cell {
     display: table;
     text-align: center;
-    min-height: 600px; }
+    min-height: 600px;
+    width: 100%; }
     body .cell .inner-cell-container {
       display: table-cell;
       vertical-align: middle; }
@@ -65,6 +58,27 @@ body {
           text-align: justify;
           font-family: 'Lato', sans-serif;
           font-size: 36px; }
+  body #about-me, body #technologies, body #my-projects, body #contact {
+    padding: 200px 0;
+    background-image: url(./img/code-desktop.jpg);
+    background-attachment: fixed;
+    background-repeat: no-repeat; }
+  body #technologies {
+    background-image: url(./img/mobile-desktop.jpg); }
+    body #technologies .background-container {
+      width: 100%;
+      border-radius: 0; }
+      body #technologies .background-container #icon-container {
+        width: 100%;
+        height: 300px; }
+        body #technologies .background-container #icon-container i {
+          position: absolute;
+          width: calc(100% / 3);
+          font-size: 256px; }
+  body #my-projects {
+    background-image: url(./img/design-desktop.jpg); }
+  body #contact {
+    background-image: url(./img/office-desktop.jpg); }
 
 footer {
   text-align: center; }
